Fix misaligned graphs

--- a/css/style-graph.css
+++ b/css/style-graph.css
@@ -1,9 +1,9 @@
-#graph{
+/*#graph{
     display: block;
     margin: auto;
-}
+}*/
 
-#iframe1{
+/*#iframe1{
     display: block;
     margin: 0 auto;
 }
@@ -13,7 +13,7 @@
     margin: 0 auto;
 }
 
-
+*/
  #Answer1{
     display: block;
     margin: 0 auto;
@@ -37,9 +37,23 @@
 #Answer5{
     border: none;
 }
+/*
+.col-lg-2{
+    display: block;
+    margin: 0 auto;
+}
 
 
+.col-lg-4{
+    display: block;
+    margin: 0 auto;
+}
 
+#graph{
+    display: block;
+    margin: 0 auto;
+}
+*/
 
 /*
 
